--- a/CustomCables/Views/Home/Index.cshtml
+++ b/CustomCables/Views/Home/Index.cshtml
@@ -2,10 +2,15 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">Testing this cable setup thingy.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+@*<div class="jumbotron">
+    <h1>Sentinel Cables</h1>
+    <p class="lead"></p>
+    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a>
+    </p>
+</div>*@
+
+<div class="overlay">
+    <div id="background_image"></div>
 </div>
 
 <div class="row">
